welcome.lessons.welcome.array.indexof.maxvalue.IndexOfMaxValue.scala.error
indexOfMaxValue:7: error: reassignment to val
	 i=p}
          ^indexOfMaxValue:10: error: not found: value p
	return p
               ^